digit_recognition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digit-recognition-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: havilash/digit-recognition:latest
        ports:
        - containerPort: 5000

apiVersion: v1
kind: Service
metadata:
  name: digit-recognition-service
spec:
  selector:
    app: flask-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
